--- a/src/css/longread.css
+++ b/src/css/longread.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: VELTIC;
   src:
-    url('../font/VELTICRegular.woff2') format('woff2'),
-    url('../font/VELTICRegular.woff') format('woff');
+    url(../font/VELTICRegular.woff2) format('woff2'),
+    url(../font/VELTICRegular.woff) format('woff');
 
   font-weight: normal;
   font-style: normal;
@@ -13,7 +13,7 @@
   height: 100vh;
   background-image:
     linear-gradient(to bottom, rgba(255, 255, 255, .1), rgba(04, 05, 09, .4)),
-    url('../images/Longread/Header-adjusted.jpg');
+    url(../images/Longread/Header-adjusted.jpg);
   background-size: cover;
   background-position: center;
   display: flex;
@@ -99,7 +99,6 @@
 
 .longread__btn {
   color: #ffbf18;
-  -webkit-animation: animation 3000ms linear infinite both;
   animation: animation 3000ms linear infinite both;
 }
 
@@ -131,7 +130,7 @@
 .longread__title {
   color: white;
   padding-bottom: 2rem;
-  opacity: 0.8;
+  opacity: .8;
 }
 
 .summary__text {
@@ -150,28 +149,36 @@
 .introduction {
   width: 100%;
   height: auto;
-  background-image:
-  linear-gradient(to bottom, rgba(04, 05, 09, 1), rgba(04, 05, 09, .95));
+  background-image: linear-gradient(to bottom, rgba(04, 05, 09, 1), rgba(04, 05, 09, .95));
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .characters {
-  width: 60%;
+  width: 100%;
   margin: auto;
   height: auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
+.vader__naam {
+  color: white;
+  text-shadow: white 1rem;
+}
+
+.zoon__naam {
+  color: white;
+}
+
 .vader {
-  width: 40%;
+  width: 45%;
   height: 40rem;
   background-image:
     radial-gradient(rgba(10, 10, 10, .1), rgba(04, 05, 09, 1)),
-    url('../images/Longread/Vader-art.png');
+    url(../images/Longread/Vader-art.png);
   background-size: cover;
   background-position: right;
   box-shadow: 0 0 200px rgba(4, 5, 9, 1) inset;
@@ -194,7 +201,7 @@
   text-align: center;
 }
 
-.vader .vader__naam{
+.vader .vader__naam {
   position: absolute;
   bottom: 5rem;
   left: 0;
@@ -209,21 +216,19 @@
 }
 
 .zoon {
-  width: 40%;
+  width: 45%;
   height: 40rem;
-  background-image:
-    radial-gradient(rgba(10, 10, 10, .2), rgba(04, 05, 09, 1)),
-    url('../images/Longread/zoon-art.png');
+  background-image: radial-gradient(rgba(10, 10, 10, .2), rgba(04, 05, 09, 1)), url(../images/Longread/zoon-art.png);
   background-size: cover;
   background-position: center;
-  box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
+  box-shadow: 0 0 200px rgba(0, 0, 0, .9) inset;
   opacity: .9;
   transition: .2s ease;
   position: relative;
 
 }
 
-.zoon .zoon__naam{
+.zoon .zoon__naam {
   position: absolute;
   bottom: 5rem;
   left: 0;
@@ -238,7 +243,8 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  background: rgba(160, 160, 160, .1);  border: none;
+  background: rgba(160, 160, 160, .1);
+  border: none;
   border-radius: .1rem;
   padding: 1.2rem 2rem;
   color: var(--longread--accent--color);
@@ -274,7 +280,7 @@
 
 }
 
-.name__input input::placeholder{
+.name__input input::placeholder {
   color: #ffbf18;
 }
 
@@ -288,13 +294,13 @@
   padding: 1rem 1.2rem;
   border-radius: .2rem;
   opacity: .8;
-  transform: scale(0.9);
+  transform: scale(.9);
   transition: .2s ease;
   cursor: pointer;
 
 }
 
-.orange{
+.orange {
   color: white;
   background-color: #ffbf18;
 }
@@ -305,21 +311,32 @@
   box-shadow: .1rem .1rem 6rem rgba(200, 200, 200, .3);
 }
 
-.vader__naam {
-  color: white;
-  text-shadow: white 1rem;
+
+.longread__grid__verhaal {
+  width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 3rem;
 }
 
-.zoon__naam {
-  color:white;
+.longread__grid__verhaal h2 {
+  color: #ffbf18;
+}
+
+.longread__grid__verhaal p {
+  color: var(--longread--main--color);
+  font-size: var(--longread--p--size);
+  opacity: .8;
+  text-align: justify;
+  line-height: 2.2rem;
 }
 
 .roadmap {
   width: 100%;
   height: 60rem;
-  background-image:
-  radial-gradient(rgba(10, 10, 10, .2), rgba(04, 05, 09, 0.8)),
-    url('../images/Longread/road--art.jpg');
+  background-image: radial-gradient(rgba(10, 10, 10, .2), rgba(04, 05, 09, .8)), url(../images/Longread/road--art.jpg);
   background-size: cover;
   background-position: center;
   position: relative;
@@ -340,11 +357,11 @@
   transition: .2s ease;
 }
 
-.volgende{
+.volgende {
   color: white;
 }
 
-.btn__hoofdstuk:hover{
+.btn__hoofdstuk:hover {
   opacity: 1;
   transition: .2s ease;
   cursor: pointer;
@@ -368,7 +385,7 @@
   left: 91rem;
 }
 
-.content__wrapper{
+.content__wrapper {
   width: 100%;
   height: auto;
   background-color: var(--longread--dark--color);
@@ -402,21 +419,23 @@
   width: 100%;
 }
 
-.longread__grid h1{
+.longread__grid h1 {
   color: #ffbf18;
   font-size: 3.6rem;
   line-height: 4.2rem;
+  /* styelint-disable */
   font-family: VELTIC;
   text-align: right;
 
 }
 
-.longread__grid h2{
+.longread__grid h2 {
   color: #ffbf18;
   font-size: var(--longread--p--size);
   opacity: .8;
   line-height: 1.6;
 }
+
 .longread__grid p {
   color: var(--longread--main--color);
   font-size: var(--longread--p--size);
@@ -459,7 +478,7 @@
   color: white;
 }
 
-.buy{
+.buy {
   width: 100%;
   height: 20rem;
   background-color: var(--longread--dark--color);
@@ -469,7 +488,7 @@
   flex-direction: column;
 }
 
-.buy h1{
+.buy h1 {
   padding-bottom: 2rem;
   color: #ffbf18;
 }
@@ -477,41 +496,337 @@
 .footer {
   width: 100%;
   height: 15rem;
-  background-image: url('../images/footer.png');
+  background-image: url(../images/footer.png);
   background-size: cover;
   background-position: center;
 }
 
 .animate {
-  -webkit-animation: animation 3000ms linear infinite both;
   animation: animation 3000ms linear infinite both;
 }
 
-/* Generated with Bounce.js. Edit at http://bouncejs.com#%7Bl%3A1%2Cs%3A%5B%7BT%3A%22t%22%2Ce%3A%22s%22%2Cd%3A3000%2CD%3A0%2Cf%3A%7Bx%3A0%2Cy%3A0%7D%2Ct%3A%7Bx%3A0%2Cy%3A20%7D%2Cs%3A1%2Cb%3A10%7D%5D%7D */
+@media only screen and (max-width: 768px) {
 
-@-webkit-keyframes animation {
-  0% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  2.1% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 10.457, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 10.457, 0, 1); }
-  4.2% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 14.078, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 14.078, 0, 1); }
-  6.71% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 10.328, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 10.328, 0, 1); }
-  9.21% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 2.442, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 2.442, 0, 1); }
-  11.71% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -4.206, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -4.206, 0, 1); }
-  14.21% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -6.584, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -6.584, 0, 1); }
-  16.72% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -4.817, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -4.817, 0, 1); }
-  19.22% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -1.127, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -1.127, 0, 1); }
-  21.72% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1.976, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1.976, 0, 1); }
-  24.22% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 3.079, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 3.079, 0, 1); }
-  29.23% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.52, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.52, 0, 1); }
-  34.23% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -1.44, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -1.44, 0, 1); }
-  44.24% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.673, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.673, 0, 1); }
-  54.25% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.315, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.315, 0, 1); }
-  64.26% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.147, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.147, 0, 1); }
-  74.27% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.069, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.069, 0, 1); }
-  84.28% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.032, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.032, 0, 1); }
-  94.29% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.015, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.015, 0, 1); }
-  100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  .summary__content {
+
+    justify-content: space-between;
+  }
+
+  .longread__grid__verhaal {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-gap: 3rem;
+  }
+
+  .roadmap {
+    background-image: radial-gradient(rgba(10, 10, 10, .2), rgba(04, 05, 09, .8)), url(../images/Longread/road--art--ipad.jpg);
+  }
+
+  .hoofdstuk2__button {
+    position: absolute;
+    top: 32rem;
+    left: 13rem;
+  }
+
+  .hoofdstuk8__button {
+    position: absolute;
+    top: 25rem;
+    left: 30rem;
+  }
+
+  .hoofdstuk16__button {
+    position: absolute;
+    top: 22rem;
+    left: 46rem;
+  }
+
+  .content__wrapper {
+    width: 100%;
+    height: auto;
+    background-color: var(--longread--dark--color);
+    padding-top: 4rem;
+    padding-bottom: var(--longread--padding--desktop);
+
+  }
+
+  .longread__grid {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    grid-gap: 3rem;
+  }
+
+  .hoofdstuk2 {
+    display: none;
+  }
+
+  .hoofdstuk8 {
+    display: none;
+  }
+
+  .hoofdstuk16 {
+    display: none;
+  }
+
+  .grid__item img {
+    width: 100%;
+  }
+
+  .longread__grid h1 {
+    color: #ffbf18;
+    font-size: 3.6rem;
+    line-height: 4.2rem;
+    /* styelint-disable */
+    font-family: VELTIC;
+    text-align: right;
+
+  }
+
+  .longread__grid h2 {
+    color: #ffbf18;
+    font-size: var(--longread--p--size);
+    opacity: .8;
+    line-height: 1.6;
+  }
+
+  .longread__grid p {
+    color: var(--longread--main--color);
+    font-size: var(--longread--p--size);
+    opacity: .8;
+    text-align: justify;
+    line-height: 2.2rem;
+  }
+
+  .grid1 {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .grid2 {
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  .grid3 {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .grid4 {
+    grid-column: 2;
+    grid-row: 3;
+  }
+
+  .grid5 {
+    grid-column: 2;
+    grid-row: 2;
+  }
+
+  .grid6 {
+    grid-column: 1;
+    grid-row: 3;
+  }
+
+  .buy {
+    height: 30rem;
+  }
+
+  .footer {
+    width: 100%;
+    height: 10rem;
+    background-image: url(../images/footer.png);
+    background-size: cover;
+    background-position: center;
+  }
+
+  .animate {
+    animation: animation 3000ms linear infinite both;
+  }
 }
 
+
+@media only screen and (max-width: 375px) {
+
+  .dropdown__nav ul {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .dropdown__nav ul li {
+    padding-bottom: 1rem;
+    padding-right: 0;
+
+  }
+
+  .header {
+    width: 100%;
+    height: 100vh;
+    background-image:
+      linear-gradient(to bottom, rgba(255, 255, 255, .1), rgba(04, 05, 09, .4)),
+      url(../images/Longread/Header-adjusted--mobile.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+  }
+
+  .summary__content {
+
+    justify-content: space-between;
+  }
+
+  .longread__grid__verhaal {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-gap: 3rem;
+  }
+
+  .roadmap {
+    background-image: radial-gradient(rgba(10, 10, 10, .2), rgba(04, 05, 09, .8)), url(../images/Longread/road--art--mobile.jpg);
+  }
+
+  .hoofdstuk2__button {
+    position: absolute;
+    top: 20rem;
+    left: 13rem;
+  }
+
+  .hoofdstuk8__button {
+    position: absolute;
+    top: 27rem;
+    left: 15rem;
+  }
+
+  .hoofdstuk16__button {
+    position: absolute;
+    top: 35rem;
+    left: 10rem;
+  }
+
+  .content__wrapper {
+    width: 100%;
+    height: auto;
+    background-color: var(--longread--dark--color);
+    padding-top: 4rem;
+    padding-bottom: var(--longread--padding--desktop);
+
+  }
+
+  .longread__grid {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    grid-gap: 3rem;
+  }
+
+  .hoofdstuk2 {
+    display: none;
+  }
+
+  .hoofdstuk8 {
+    display: none;
+  }
+
+  .hoofdstuk16 {
+    display: none;
+  }
+
+  .grid__item img {
+    width: 100%;
+  }
+
+  .longread__grid h1 {
+    color: #ffbf18;
+    font-size: 3.6rem;
+    line-height: 4.2rem;
+    /* styelint-disable */
+    font-family: VELTIC;
+    text-align: right;
+
+  }
+
+  .longread__grid h2 {
+    color: #ffbf18;
+    font-size: var(--longread--p--size);
+    opacity: .8;
+    line-height: 1.6;
+  }
+
+  .longread__grid p {
+    color: var(--longread--main--color);
+    font-size: var(--longread--p--size);
+    opacity: .8;
+    text-align: justify;
+    line-height: 2.2rem;
+  }
+
+  .grid1 {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .grid2 {
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  .grid3 {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .grid4 {
+    grid-column: 2;
+    grid-row: 3;
+  }
+
+  .grid5 {
+    grid-column: 2;
+    grid-row: 2;
+  }
+
+  .grid6 {
+    grid-column: 1;
+    grid-row: 3;
+  }
+
+  .buy {
+    height: 30rem;
+  }
+
+  .footer {
+    width: 100%;
+    height: 10rem;
+    background-image: url(../images/footer.png);
+    background-size: cover;
+    background-position: center;
+  }
+
+  .animate {
+    animation: animation 3000ms linear infinite both;
+  }
+}
+
+
+/* Generated with Bounce.js. Edit at http://bouncejs.com#%7Bl%3A1%2Cs%3A%5B%7BT%3A%22t%22%2Ce%3A%22s%22%2Cd%3A3000%2CD%3A0%2Cf%3A%7Bx%3A0%2Cy%3A0%7D%2Ct%3A%7Bx%3A0%2Cy%3A20%7D%2Cs%3A1%2Cb%3A10%7D%5D%7D */
+/* stylelint-disable */
 @keyframes animation {
   0% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
   2.1% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 10.457, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 10.457, 0, 1); }
@@ -534,3 +849,4 @@
   94.29% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.015, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.015, 0, 1); }
   100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
 }
+/* stylelint-enable */
